<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/logo_name"
        app:srcCompat="@drawable/starbucks" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/brown"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextClientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextClientPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="36dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/button_enter"
        android:textSize="14sp"
        android:onClick="CreateOrderOnClick"
        app:backgroundTint="#966B6B" />

</LinearLayout>