<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7EF68"
    tools:context=".CreateOrderActivity">

    <TextView
        android:id="@+id/textViewAboutOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/question_about_order"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/dark_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupTeaCoffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAboutOrder">

        <RadioButton
            android:id="@+id/radioButtonTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:checked="true"
            android:textColor="@color/orange"
            android:text="@string/teaButton"
            android:onClick="changeDrinkOnClick"
            />

        <RadioButton
            android:id="@+id/radioButtonCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/orange"
            android:text="@string/coffeeButton"
            android:onClick="changeDrinkOnClick"
            />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewAboutAddition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/question_about_addition"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/dark_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupTeaCoffee" />

    <CheckBox
        android:id="@+id/checkBoxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/checkbox_milk"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toStartOf="@id/checkBoxSugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAboutAddition" />

    <CheckBox
        android:id="@+id/checkBoxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/checkbox_sugar"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toStartOf="@id/checkBoxLemon"
        app:layout_constraintStart_toEndOf="@id/checkBoxMilk"
        app:layout_constraintTop_toBottomOf="@id/textViewAboutAddition" />

    <CheckBox
        android:id="@+id/checkBoxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/checkbox_lemon"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="@id/checkBoxCream"
        app:layout_constraintStart_toEndOf="@id/checkBoxSugar"
        app:layout_constraintTop_toBottomOf="@id/textViewAboutAddition" />

    <CheckBox
        android:id="@+id/checkBoxCream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/checkbox_cream"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkBoxLemon"
        app:layout_constraintTop_toBottomOf="@id/textViewAboutAddition" />

    <TextView
        android:id="@+id/textViewChooseDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/question_about_drink"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/dark_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBoxSugar" />

    <Spinner
        android:id="@+id/spinnerChooseTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:entries="@array/tea_types"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink" />

    <Spinner
        android:id="@+id/spinnerChooseCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:entries="@array/coffee_types"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink" />

    <ImageView
        android:id="@+id/imageViewSendButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/button_send_order"
        android:src="@drawable/buttonbutton"
        android:onClick="sendOrderOnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerChooseCoffee" />

</androidx.constraintlayout.widget.ConstraintLayout>